--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,21 @@ img {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(33, 37, 41, 0.75)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
+/* Dark theme navbar toggler styles */
+[data-theme="dark"] .navbar-toggler {
+  border-color: var(--border-color) !important;
+  background-color: var(--bg-light) !important;
+}
+
+[data-theme="dark"] .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(224, 224, 224, 0.9)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+}
+
+[data-theme="dark"] .navbar-toggler:hover {
+  border-color: var(--primary-color) !important;
+  background-color: var(--bg-color) !important;
+}
+
 .navbar.sticky {
   position: fixed;
   top: 0;
